--- a/.github/workflows/gh_pages-deploy.yml
+++ b/.github/workflows/gh_pages-deploy.yml
@@ -33,5 +33,5 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.MY_WORKFLOW_TOKEN }}
         publish_dir: web-dacpac/dist  # The folder to publish to GitHub Pages
