Added gh pages homepage to package.json

--- a/web-dacpac/package.json
+++ b/web-dacpac/package.json
@@ -1,5 +1,6 @@
 {
   "name": "web-dacpac",
+  "homepage": "https://pabloqb2000.github.io/web-DacPac",
   "private": true,
   "version": "0.0.0",
   "type": "module",
